Javascript knappar, styling, etc.

--- a/Receptuppgift/index.html
+++ b/Receptuppgift/index.html
@@ -5,61 +5,65 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>Recept</title>
 </head>
 <body>
-  <header>
-    <h1>COOL RECEPTSAMLING</h1>
-  </header>
+  <div class="box-grid">
+    <header>
+      <h1>COOL RECEPTSAMLING</h1>
+    </header>
 
-  <aside>
-    <img src="./img/mat.jfif">
-  </aside>
+    <aside>
+      <img src="./img/mat.jfif">
+    </aside>
 
-  <section>
-    <h1>KORV STROGANOFF</h1>
-  </section>
+    <section>
+      <h1>KORV STROGANOFF</h1>
+    </section>
 
-  <sidebar>
-    <h3>Ingredienser</h3>
-    <ul>
-      <li>4 portioner ris</li>
-      <li>550g falukorv</li>
-      <li>1 gul lök</li>
-      <li>1 msk olja</li>
-      <li>3 msk tomatpuré</li>
-      <li>2½ dl grädde</li>
-      <li>1 dl mjölk</li>
-      <li>1 msk japansk soja</li>
-      <li>1 tsk dijonsenap</li>
-      <li>peppar</li>
-      <li>salt</li>
-    </ul>
-  </sidebar>
-  
-  <main>
-    <ol>
-      <li>Koka riset enligt anvisning på förpackningen.</li>
-      <li>Skär korven i stavar. Skala och hacka löken.</li>
-      <li>Stek korv och lök i oljan i en stekpanna ca 5 min.</li>
-      <li>Tillsätt tomatpuré och fräs någon minut.</li>
-      <li>Rör ner grädde, mjölk, soja, och dijonsenap.</li>
-      <li>Låt sjuda ca 5 minuter.</li>
-      <li>Smaka av med peppar och salt.</li>
-      <li>Servera med ris vid sidan om.</li>
-    </ol>
-  </main>
+    <sidebar>
+      <h3>Ingredienser</h3>
+      <ul>
+        <li>4 portioner ris</li>
+        <li>550g falukorv</li>
+        <li>1 gul lök</li>
+        <li>1 msk olja</li>
+        <li>3 msk tomatpuré</li>
+        <li>2½ dl grädde</li>
+        <li>1 dl mjölk</li>
+        <li>1 msk japansk soja</li>
+        <li>1 tsk dijonsenap</li>
+        <li>peppar</li>
+        <li>salt</li>
+      </ul>
+    </sidebar>
+    
+    <main>
+      <ol id="instruction-list">
+        <li>Koka riset enligt anvisning på förpackningen.</li>
+        <li>Skär korven i stavar. Skala och hacka löken.</li>
+        <li>Stek korv och lök i oljan i en stekpanna ca 5 min. </li>
+        <li>Tillsätt tomatpuré och fräs någon minut.</li>
+        <li>Rör ner grädde, mjölk, soja, och dijonsenap.</li>
+        <li>Låt sjuda ca 5 minuter. </li>
+        <li>Smaka av med peppar och salt.</li>
+        <li>Servera med ris vid sidan om.</li>
+      </ol>
+    </main>
 
-  <article>
-    <h2>Fakta</h2>
-    <p>Korv Stroganoff är en svensk maträtt med korv som är inspirerad av maträtten Biff Stroganoff.</p>
-    <p>Den innehåller vanligast strimlad falukorv.</p>
-    <p>Rätten har ursprung från 1800-talet.</p>
-  </article>
+    <article>
+      <h2>Fakta</h2>
+      <p>Korv Stroganoff är en svensk maträtt med korv som är inspirerad av maträtten Biff Stroganoff.</p>
+      <p>Den innehåller vanligast strimlad falukorv.</p>
+      <p>Rätten har ursprung från 1800-talet.</p>
+    </article>
 
-  <footer>
-    <p>Cool Receptsamling™ 2022©</p>
-  </footer>
+    <footer>
+      <p>Cool Receptsamling™ 2022©</p>
+    </footer>
 
+    <script type="text/javascript" src="./script/script.js"></script>
+  </div>
 </body>
 </html>
