--- a/Receptuppgift/index.html
+++ b/Receptuppgift/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <aside>
-      <img src="./img/mat.jfif">
+      <img src="./img/mat.jfif" alt="Bild på Korv Stroganoff">
     </aside>
 
     <section>
