Webbshop, cart system med sessionStorage

--- a/Webbshop/checkout.html
+++ b/Webbshop/checkout.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Webbshop</title>
+  <link rel="stylesheet" href="./css/checkout.css">
+  <title>Checkout | Webbshop</title>
 </head>
 <body>
   <div class="layout">
     <header>
-      <h1>Affär</h1>
+      <h1>Checkout</h1>
     </header>
-    <button id="checkout-button" onclick="window.location.href='checkout.html'">Checkout</button>
     <div id="items"></div>
   </div>
-  <script src="./script/main.js" type="module"></script>
+  <script type="module" src="./script/checkout.js"></script>
 </body>
 </html>
