--- a/Webbshop/checkout.html
+++ b/Webbshop/checkout.html
@@ -14,30 +14,35 @@
     <header>
       <h1>Filips Second Hand-Butik</h1>
       <div class="checkout-button">
-        <img class="checkout-button-img" src="./img/cart.png" alt="Cart" onclick="window.location.href='checkout.html'">
+        <img src="./img/cart.webp" alt="Cart" onclick="window.location.href='checkout.html'">
         <span class="counter">
           <p id="cart-size">0</p>
         </span>
       </div>
     </header>
+
     <nav>
-      <a href="https://adamtroberg.github.io/repos/">Om oss</a>
-      <a href="https://loremipsum.io">Returpolicy</a>
-      <a href="https://www.google.com/maps/@-69.0067472,39.578125,3a,75y,46.71h,68.44t/data=!3m8!1e1!3m6!1sAF1QipPUm5h9-zt2B7qn29miccmL6GtDWaWhZ70xJGw!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipPUm5h9-zt2B7qn29miccmL6GtDWaWhZ70xJGw%3Dw203-h100-k-no-pi-0-ya176.5-ro0-fo100!7i5376!8i2688">Hitta hit</a>
+      <a href="https://adamtroberg.github.io/repos/" target="_blank">Om oss</a>
+      <a href="https://loremipsum.io" target="_blank">Returpolicy</a>
+      <a href="https://www.google.com/maps/@-69.0067472,39.578125,3a,75y,46.71h,68.44t/data=!3m8!1e1!3m6!1sAF1QipPUm5h9-zt2B7qn29miccmL6GtDWaWhZ70xJGw!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipPUm5h9-zt2B7qn29miccmL6GtDWaWhZ70xJGw%3Dw203-h100-k-no-pi-0-ya176.5-ro0-fo100!7i5376!8i2688" target="_blank">Hitta hit</a>
     </nav>
+
     <div class="cart">
       <h2>Kundvagn</h2>
       <ul id="cart-list"></ul>
     </div>
+
     <div class="total">
       <h2 id="total-text">Total: 0kr</h2>
     </div>
+
     <label for="code">Rabattkod:</label>
     <input type="text" id="code" name="code">
     <button id="apply">Använd kod</button>
     <button id="clear">Rensa varukorgen</button>
     <button id="continue" onclick="window.location.href='index.html'">Fortsätt handla</button>
     <button id="pay">Betala</button>
+    
     <footer>
       <p>Kontakta oss: <a href="mailto:support@filip.se">support@filip.se</a></p>
     </footer>
