--- a/Webbshop/checkout.html
+++ b/Webbshop/checkout.html
@@ -38,10 +38,10 @@
 
     <label for="code">Rabattkod:</label>
     <input type="text" id="code" name="code">
-    <button id="apply">Använd kod</button>
-    <button id="clear">Rensa varukorgen</button>
-    <button id="continue" onclick="window.location.href='index.html'">Fortsätt handla</button>
-    <button id="pay">Betala</button>
+    <button type="submit" id="apply">Använd kod</button>
+    <button type="button" id="clear">Rensa varukorgen</button>
+    <button type="button" id="continue" onclick="window.location.href='index.html'">Fortsätt handla</button>
+    <button type="button" id="pay">Betala</button>
     
     <footer>
       <p>Kontakta oss: <a href="mailto:support@filip.se">support@filip.se</a></p>
